--- a/index.html
+++ b/index.html
@@ -369,8 +369,7 @@ transition-timing-function: ease-out;
 transition-timing-function: ease-in-out;
 transition-timing-function: linear;
 transition-timing-function: step-start;
-transition-timing-function: step-end;
-</code>
+transition-timing-function: step-end;</code>
 </pre>
         </article>
     </section>
